frontend/test/should_pass/alterror.gm
node class gnode {
   info: string;
}
edge class gedge ;
