frontend/test/should_fail/same_attribute_as_node_edge_name.gm
node class Foo {
	Foo : int;
}

edge class Bar {
	Bar : string;
}

